Removed filter icon and made basic fix, so that you can use system on mobile phones

--- a/WebApp/src/main/webapp/css/kupra.css
+++ b/WebApp/src/main/webapp/css/kupra.css
@@ -1,12 +1,24 @@
 @media (max-width: 768px) {
     body {
-        padding-top: 160px;
+        padding-top: 100px;
+    }
+
+    .navbarImage {
+        width: 24px;
+        height: 24px;
+        margin: 10px 7px;
     }
 }
 
 @media (min-width: 768px) {
     body {
         padding-top: 60px;
+    }
+
+    .navbarImage {
+        width: 26px;
+        height: 26px;
+        margin: 3px 9px;
     }
 }
 
@@ -51,11 +63,7 @@ body.no-navbar {
     align-self: auto;
 }
 
-.navbarImage {
-    width: 26px;
-    height: 26px;
-    margin: 3px 9px;
-}
+
 
 .btn-image {
     width: 20px;
